Fix CSS top clipping issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -332,7 +332,7 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 /* Court Titles and Labels */
